Localisation Added for notifications

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,5 +12,27 @@
   "languageSettingsNameEnglish": "English",
   "languageSettingsNameHindi": "हिन्दी",
   "search": "Search",
-  "settingsLanguagePageAppBarTitle": "Select language"
+  "settingsLanguagePageAppBarTitle": "Select language",
+  "send_a_local_notification": "Send a local notification",
+  "send_a_push_notification": "Send a Push notification",
+  "in_app_messaging": "In-App Messaging",
+  "send_custom_in_app_message": "Send custom in-app message",
+  "other_local_notifiers": "Other Local Notifiers",
+  "show_snack_bar": "Show snack-bar",
+  "show_toast": "Show toast",
+  "sample_popup": "Sample popup",
+  "this_is_a_sample_dialog": "This is a sample dialog",
+  "show_popup": "Show popup",
+  "notification_body": "This is the notification body",
+  "in_app": "in app",
+  "cloud": "Cloud",
+  "simple_notification": "Simple Notification",
+  "simple_body": "Simple body",
+  "notification": "notification",
+  "hardcoded_text": "This is a text is hardcoded for this button click. This box will show actual text when initiated from the console",
+  "sample_message": "Sample message",
+  "this_is_a_title": "This is a title",
+  "this_is_the_body": "This is the body",
+  "ok": "OK",
+  "this_is_an_in_app_message": "This is an in-app message"
 }
