--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -12,5 +12,27 @@
   "languageSettingsNameEnglish": "English",
   "languageSettingsNameHindi": "हिन्दी",
   "search": "तलाशी",
-  "settingsLanguagePageAppBarTitle": "भाषा का चयन करें"
+  "settingsLanguagePageAppBarTitle": "भाषा का चयन करें",
+  "send_a_local_notification": "एक स्थानीय सूचना भेजें",
+  "send_a_push_notification": "एक पुश सूचना भेजें",
+  "in_app_messaging": "इन-ऐप मैसेजिंग",
+  "send_custom_in_app_message": "कस्टम इन-ऐप संदेश भेजें",
+  "other_local_notifiers": "अन्य स्थानीय नोटिफ़ायर",
+  "show_snack_bar": "स्नैक-बार दिखाएं",
+  "show_toast": "टोस्ट दिखाओ",
+  "sample_popup": "नमूना पॉपअप",
+  "this_is_a_sample_dialog": "यह एक नमूना संवाद है",
+  "show_popup": "पॉपअप दिखाएं",
+  "notification_body": "यह है अधिसूचना निकाय",
+  "in_app": "ऐप में",
+  "cloud": "बादल",
+  "simple_notification": "सरल अधिसूचना",
+  "simple_body": "सादा शरीर",
+  "notification": "अधिसूचना",
+  "hardcoded_text": "यह एक टेक्स्ट है जिसे इस बटन क्लिक के लिए हार्डकोड किया गया है। कंसोल से शुरू होने पर यह बॉक्स वास्तविक टेक्स्ट दिखाएगा",
+  "sample_message": "नमूना संदेश",
+  "this_is_a_title": "यह एक शीर्षक है",
+  "this_is_the_body": "यह शरीर है",
+  "ok": "ठीक है",
+  "this_is_an_in_app_message": "यह एक इन-ऐप संदेश है"
 }
